Small fixes in user manual

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -456,10 +456,11 @@ Examples of array definitions are given below:
 \subsubsection{Lists}
 %------------------------------------------------------------
 
-Lists are collections of variable length - contrary to arrays, the type of a list doesn't depend on it's length, thus it's possible to compare two lists of different lengths.
-List elements can only be accessed - not updated - using an integer-valued arithmetic expression as index.
+Lists are collections of variable length.
+Contrarily to arrays, the type of a list does not depend on its length; it is thus possible to compare two lists of different lengths.
+List elements can only be accessed---not updated---using an integer-valued arithmetic expression as index.
 A list variable always has an underlying type, which can be any of the available types of \imitator{} (including arrays and lists).
-For example, it is possible to declare a list of integers, of Booleans, of list of list of Booleans---which can be seen as a multidimensional list.
+For example, it is possible to declare a list of integers, of Booleans, of list of list of Booleans, etc.
 
 Examples of list definitions are given below:
 
